add swagger for users endpoints
