# src/routers/user.js
@@ -1,15 +1,18 @@
 import { Router } from 'express';
 import { authenticate } from '../middlewares/authenticate.js';
 import ctrlWrapper from '../utils/ctrlWrapper.js';
-import { getUserByIdController, patchUserController } from '../controllers/user.js';
+import { getUserController, patchUserAvatarController, patchUserController } from '../controllers/user.js';
 import { upload } from '../middlewares/multer.js';
+import validateBody from '../utils/validateBody.js';
+import { updateUserSchema } from '../validation/user.js';
 
 const userRouter = Router();
 
 userRouter.use(authenticate);
 
-userRouter.get('/:id', ctrlWrapper(getUserByIdController));
+userRouter.get('/', ctrlWrapper(getUserController));
 
-userRouter.patch('/:id', upload.single('avatarUrl'), ctrlWrapper(patchUserController));
+userRouter.patch('/', validateBody(updateUserSchema), ctrlWrapper(patchUserController));
+userRouter.patch('/avatar', upload.single('avatarUrl'), ctrlWrapper(patchUserAvatarController));
 
 export default userRouter;
